fix z-index issue

--- a/src/components/Products/index.css
+++ b/src/components/Products/index.css
@@ -18,7 +18,7 @@
   bottom: 0;
   display: flex;
   position: absolute;
-  z-index: 100;
+  z-index: 90;
   margin: 3px 10px;
 }
 .prod-img {
